feat : 히스토리 저장 공통 로직 구현 (#109)
* feat : 히스토리 저장 공통 로직 구현

* fix : 히스토리 저장 로직 공통화, 테스트 코드 수정

* fix: 프로젝트 노드 생성 테스트 ci오류 해결

* fix : HistoryRecoder 로직 분리

* fix : WebConfig 미사용으로 제거